--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Project run nhi ho rha</h1>
+    <h1>Project run ho gya</h1>
 </body>
 </html>
